--- a/sobre.html
+++ b/sobre.html
@@ -33,7 +33,7 @@ img {margin-bottom: -7px}
 <!-- Photo Grid -->
 <div class="w3-display-container" style="margin-bottom:1000px">
 	<div class="w3-half">
-		<img src="./img/sobre/sobre.jpeg" class="w3-round">
+		<img src="./img/sobre/sobre.jpeg" class="w3-round" style="width:70%">
 	</div>
 	<div class="w3-half">
 		<p style="margin-bottom:100px">Em meio a um caminho tubulento entre artes plásticas,
