Fix image centering

--- a/sobre.html
+++ b/sobre.html
@@ -33,7 +33,8 @@ img {margin-bottom: -7px}
 <!-- Photo Grid -->
 <div class="w3-display-container" style="margin-bottom:1000px">
 	<div class="w3-half">
-		<img src="./img/sobre/sobre.jpeg" class="w3-round" style="width:70%">
+		<img src="./img/sobre/sobre.jpeg" class="w3-round"
+		style="display: block; margin-left: auto; margin-right: auto; width: 50%;">
 	</div>
 	<div class="w3-half">
 		<p style="margin-bottom:100px">Em meio a um caminho tubulento entre artes plásticas,
