--- a/obras.html
+++ b/obras.html
@@ -17,7 +17,7 @@ img {margin-bottom: -7px}
 <a href="./contato" id="barra" class="w3-bar-item w3-button w3-right" style="width:25%">CONTATO</a>
 <a href="./obras" id="barra" class="w3-bar-item w3-button w3-right" style="width:25%">OBRAS</a>
 <a href="./sobre" id="barra" class="w3-bar-item w3-button w3-right w3-text-grey" style="width:25%">SOBRE</a>
-<a href="marinana.art" id="barra" class="w3-bar-item w3-button w3-right" style="width:25%">MARINANA</a>
+<a href="./index" id="barra" class="w3-bar-item w3-button w3-right" style="width:25%">MARINANA</a>
 </div>
 
 <!-- !PAGE CONTENT! -->
