--- a/index.html
+++ b/index.html
@@ -33,30 +33,20 @@ img {margin-bottom: -7px}
 <!-- Photo Grid -->
 <div class="w3-row-padding" id="myGrid" style="margin-bottom:128px">
   <div class="w3-third">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/sound.jpg" style="width:100%">
-    <img src="/w3images/woods.jpg" style="width:100%">
-    <img src="/w3images/rock.jpg" style="width:100%">
-    <img src="/w3images/nature.jpg" style="width:100%">
-    <img src="/w3images/mist.jpg" style="width:100%">
+    <img src="./img/index/autoretrato.jpeg" style="width:100%">
+    <img src="./img/index/desaguar.jpg" style="width:100%">
   </div>
 
   <div class="w3-third">
-    <img src="/w3images/coffee.jpg" style="width:100%">
-    <img src="/w3images/bridge.jpg" style="width:100%">
-    <img src="/w3images/notebook.jpg" style="width:100%">
-    <img src="/w3images/london.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/avatar_g.jpg" style="width:100%">
+    <img src="./img/index/quentura.jpg" style="width:100%">
+    <img src="./img/index/silencio.jpg" style="width:100%">
+    <img src="./img/index/entreser.jpg" style="width:100%">
   </div>
 
   <div class="w3-third">
-    <img src="/w3images/mist.jpg" style="width:100%">
-    <img src="/w3images/workbench.jpg" style="width:100%">
-    <img src="/w3images/gondol.jpg" style="width:100%">
-    <img src="/w3images/skies.jpg" style="width:100%">
-    <img src="/w3images/lights.jpg" style="width:100%">
-    <img src="/w3images/workshop.jpg" style="width:100%">
+    <img src="./img/index/fogo.jpg" style="width:100%">
+    <img src="./img/index/fugidio.jpeg" style="width:100%">
+    <img src="./img/index/pororoca.jpg" style="width:100%">
   </div>
 </div>
 
@@ -65,8 +55,8 @@ img {margin-bottom: -7px}
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin-top:128px"> 
-  <a href="mailto:marianabbarros98@gmail.com" target="_blank"><img src="./img/mail.png" style="width: 50px"/></a>
-  <a href="http://www.instagram.com/xmarinanax" target="_blank"><img src="./img/insta.png" style="width: 35px"/></a>
+  <a href="mailto:marianabbarros98@gmail.com" target="_blank"><img src="./img/mini/mail.png" style="width: 50px"/></a>
+  <a href="http://www.instagram.com/xmarinanax" target="_blank"><img src="./img/mini/insta.png" style="width: 35px"/></a>
   <p class="w3-medium">Mariana Brandão</p>
 </footer>
 </body>
