--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@ img {margin-bottom: -7px}
 <!-- Photo Grid -->
 <div class="w3-row-padding" id="myGrid" style="margin-bottom:128px">
   <div class="w3-third">
-    <img src="./img/index/autoretrato.jpeg" style="width:100%">
-    <img src="./img/index/desaguar.jpg" style="width:100%">
+    <img class="w3-hover-opacity" src="./img/index/autoretrato.jpeg" style="width:100%">
+    <img class="w3-hover-opacity" src="./img/index/pororoca.jpg" style="width:100%">
+    <img class="w3-hover-opacity" src="./img/index/fugidio.jpeg" style="width:100%">
   </div>
 
   <div class="w3-third">
-    <img src="./img/index/quentura.jpg" style="width:100%">
-    <img src="./img/index/silencio.jpg" style="width:100%">
-    <img src="./img/index/entreser.jpg" style="width:100%">
+    <img class="w3-hover-opacity" src="./img/index/fogo.jpg" style="width:100%">
+    <img class="w3-hover-opacity" src="./img/index/desaguar.jpeg" style="width:100%">
+    <img class="w3-hover-opacity" src="./img/index/silencio.jpg" style="width:100%">
   </div>
 
   <div class="w3-third">
-    <img src="./img/index/fogo.jpg" style="width:100%">
-    <img src="./img/index/fugidio.jpeg" style="width:100%">
-    <img src="./img/index/pororoca.jpg" style="width:100%">
+    <img class="w3-hover-opacity" src="./img/index/entreser.jpg" style="width:100%">
+    <img class="w3-hover-opacity" src="./img/index/quentura.jpg" style="width:100%">
   </div>
 </div>
 
