--- a/obras.html
+++ b/obras.html
@@ -24,7 +24,7 @@ img {margin-bottom: -7px}
 <div class="w3-content" style="max-width:1500px">
 
 <!-- Header -->
-<div class="w3-opacity">
+<div>
 <header class="w3-center w3-margin-bottom">
 	<h1 class="w3-normal" style="margin-top: 5%; margin-bottom:5%;"><b>Obras</b></h1>
 </header>
