--- a/img/autoretrato/autoretrato.html
+++ b/img/autoretrato/autoretrato.html
@@ -3,7 +3,7 @@
 <title>Mariana Brandão</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="./w3.css">
+<link rel="stylesheet" href="../../w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <style>
 body{font-family: "Montserrat", sans-serif}
@@ -20,7 +20,7 @@ img {margin-bottom: -7px}
 </div>
 
 <!-- !PAGE CONTENT! -->
-<div class="w3-content" style="max-width:1500px">
+<div class="w3-content" style="max-width:800px">
 
 <!-- Header -->
 <div>
@@ -35,8 +35,8 @@ img {margin-bottom: -7px}
 </div>
 
 <!-- Photo Grid -->
-<div style="margin-bottom:128px">
-    <img src="./autoretrato.jpeg" style="width:100%">
+<div style="margin-bottom:128px; width: 100%;">
+    <img src="./autoretrato.jpeg" style="width:100%; margin-bottom: 10%;">
 </div>
 
 <!-- End Page Content -->
@@ -44,8 +44,8 @@ img {margin-bottom: -7px}
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin-top:128px"> 
-  <a href="mailto:marianabbarros98@gmail.com" target="_blank"><img src="./img/mini/mail.png" style="width: 50px"/></a>
-  <a href="http://www.instagram.com/xmarinanax" target="_blank"><img src="./img/mini/insta.png" style="width: 35px"/></a>
+  <a href="mailto:marianabbarros98@gmail.com" target="_blank"><img src="../mini/mail.png" style="width: 50px"/></a>
+  <a href="http://www.instagram.com/xmarinanax" target="_blank"><img src="../mini/insta.png" style="width: 35px"/></a>
   <p class="w3-medium">Mariana Brandão</p>
 </footer>
 </body>
