--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@ img {margin-bottom: -7px}
 
 <!-- Sidebar -->
 <div class="w3-bar w3-border w3-round w3-light-grey w3-padding-16 w3-xlarge">
-    <a href="./obras" id="barra" class="w3-bar-item w3-button w3-right" style="width:33%">OBRAS</a>
-    <a href="./sobre" id="barra" class="w3-bar-item w3-button w3-right" style="width:33%">SOBRE</a>
-    <a href="./index" id="barra" class="w3-bar-item w3-button w3-right" style="width:34%">MARINANA</a>
+    <a href="./contato" id="barra" class="w3-bar-item w3-button w3-right" style="width:25%">CONTATO</a>
+    <a href="./obras" id="barra" class="w3-bar-item w3-button w3-right" style="width:25%">OBRAS</a>
+    <a href="./sobre" id="barra" class="w3-bar-item w3-button w3-right" style="width:25%">SOBRE</a>
+    <a href="./index" id="barra" class="w3-bar-item w3-button w3-right" style="width:25%">MARINANA</a>
 </div>
 
 <!-- !PAGE CONTENT! -->
@@ -32,7 +33,7 @@ img {margin-bottom: -7px}
 <!-- Photo Grid -->
 <div class="w3-row-padding" id="myGrid" style="margin-bottom:128px">
   <div class="w3-third">
-    <img class="w3-hover-opacity" src="./img/index/autoretrato.jpeg" style="width:100%">
+	  <a href="./autoretrato"><img class="w3-hover-opacity" src="./img/index/autoretrato.jpeg" style="width:100%"></a>
     <img class="w3-hover-opacity" src="./img/index/pororoca.jpg" style="width:100%">
     <img class="w3-hover-opacity" src="./img/index/fugidio.jpeg" style="width:100%">
   </div>
