--- a/img/autorretrato/autorretrato.html
+++ b/img/autorretrato/autorretrato.html
@@ -25,7 +25,7 @@ img {margin-bottom: -7px}
 <!-- Header -->
 <div>
 <header class="w3-center w3-margin-bottom">
-	<h1 class="w3-normal" style="margin-top: 5%; margin-bottom:5%;"><b>Isso é um autorretrato?</b></h1>
+	<h1 class="w3-normal" style="margin-top: 5%; margin-bottom:5%;"><b>Isso é um autoretrato?</b></h1>
 </header>
 </div>
 <div>
@@ -36,7 +36,7 @@ img {margin-bottom: -7px}
 
 <!-- Photo Grid -->
 <div style="margin-bottom:128px; width: 100%;">
-    <img src="./autorretrato.jpeg" style="width:100%; margin-bottom: 10%;">
+    <img src="./autoretrato.jpeg" style="width:100%; margin-bottom: 10%;">
 </div>
 
 <!-- End Page Content -->
