--- a/obras.html
+++ b/obras.html
@@ -32,6 +32,12 @@ img {margin-bottom: -7px}
 <!-- Photo Grid -->
 <div class="w3-display-container" style="margin-bottom:100px">
 	<ul class="w3-ul w3-large">
+		<li>2021 – Sob o meu teto, 100 x 120 cm</li>
+		<li>2021 – Eu nem sei mais o que é sentir pouco, 120 x 80 cm</li>
+		<li>2021 – Limites do vazio, 60 x 80 cm</li>
+		<li>2021 – O desatar de nós gira em redemoinho II, 60 x 70 cm</li>
+		<li>2021 – O desatar de nós gira em redemoinho I, 60 x 70 cm</li>
+		<li>2021 – Quarteto em dois 2, 30 x 30 cm</li>
 		<li>2021 – Quarteto em dois 1, 30 x 30 cm</li>
 		<li>2021 – Penumbra de quando te contei que tinha medo de escuro, 30 x 42 cm</li>
 		<li>2021 – Fugidío, 70 x 90 cm</li>
