fix autorretrato name

--- a/img/autorretrato/autorretrato.html
+++ b/img/autorretrato/autorretrato.html
@@ -36,7 +36,7 @@ img {margin-bottom: -7px}
 
 <!-- Photo Grid -->
 <div style="margin-bottom:128px; width: 100%;">
-    <img src="./autoretrato.jpeg" style="width:100%; margin-bottom: 10%;">
+    <img src="./autorretrato.jpeg" style="width:100%; margin-bottom: 10%;">
 </div>
 
 <!-- End Page Content -->
