--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ img {margin-bottom: -7px}
 <!-- Photo Grid -->
 <div class="w3-row-padding" id="myGrid" style="margin-bottom:128px">
   <div class="w3-third">
-	  <a href="./img/autoretrato/autoretrato"><img class="w3-hover-opacity" src="./img/index/autoretrato.jpeg" style="width:100%"></a>
+	  <a href="./img/autorretrato/autorretrato"><img class="w3-hover-opacity" src="./img/index/autorretrato.jpeg" style="width:100%"></a>
     <img class="w3-hover-opacity" src="./img/index/pororoca.jpg" style="width:100%">
     <img class="w3-hover-opacity" src="./img/index/fugidio.jpeg" style="width:100%">
   </div>
