--- a/obras.html
+++ b/obras.html
@@ -37,6 +37,7 @@ img {margin-bottom: -7px}
 		<li>2021 – Limites do vazio, 60 x 80 cm</li>
 		<li>2021 – O desatar de nós gira em redemoinho II, 60 x 70 cm</li>
 		<li>2021 – O desatar de nós gira em redemoinho I, 60 x 70 cm</li>
+		<li>2021 – Dilacerar, 60 x 70 cm</li>
 		<li>2021 – Quarteto em dois 2, 30 x 30 cm</li>
 		<li>2021 – Quarteto em dois 1, 30 x 30 cm</li>
 		<li>2021 – Penumbra de quando te contei que tinha medo de escuro, 30 x 42 cm</li>
