--- a/index.html
+++ b/index.html
@@ -35,17 +35,20 @@ img {margin-bottom: -7px}
 	  <a href="./img/autorretrato/autorretrato"><img class="w3-hover-opacity" src="./img/index/autorretrato.jpeg" style="width:100%"></a>
     <img class="w3-hover-opacity" src="./img/index/pororoca.jpg" style="width:100%">
     <img class="w3-hover-opacity" src="./img/index/fugidio.jpeg" style="width:100%">
+    <img class="w3-hover-opacity" src="./img/index/dilacerar.jpg" style="width:100%">
   </div>
 
   <div class="w3-third">
     <img class="w3-hover-opacity" src="./img/index/fogo.jpg" style="width:100%">
     <img class="w3-hover-opacity" src="./img/index/desaguar.jpeg" style="width:100%">
     <img class="w3-hover-opacity" src="./img/index/silencio.jpg" style="width:100%">
+    <img class="w3-hover-opacity" src="./img/index/limites.jpg" style="width:100%">
   </div>
 
   <div class="w3-third">
     <img class="w3-hover-opacity" src="./img/index/entreser.jpg" style="width:100%">
     <img class="w3-hover-opacity" src="./img/index/quentura.jpg" style="width:100%">
+    <img class="w3-hover-opacity" src="./img/index/sentirpouco.jpg" style="width:100%">
   </div>
 </div>
 
