--- a/index.html
+++ b/index.html
@@ -40,12 +40,15 @@ img {margin-bottom: -7px}
   </div>
 
   <div class="w3-third">
+    <img class="w3-hover-opacity" src="./img/index/limites.JPG" style="width:100%">
+    <img class="w3-hover-opacity" src="./img/index/penumbra.JPG" style="width:100%">
     <img class="w3-hover-opacity" src="./img/index/fogo.jpg" style="width:100%">
     <img class="w3-hover-opacity" src="./img/index/desaguar.jpeg" style="width:100%">
     <img class="w3-hover-opacity" src="./img/index/silencio.jpg" style="width:100%">
   </div>
 
   <div class="w3-third">
+    <img class="w3-hover-opacity" src="./img/index/sentirpouco.JPG" style="width:100%">
     <img class="w3-hover-opacity" src="./img/index/entreser.jpg" style="width:100%">
     <img class="w3-hover-opacity" src="./img/index/quentura.jpg" style="width:100%">
   </div>
