--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ img {margin-bottom: -7px}
     <img class="w3-hover-opacity" src="./img/index/dilacerar.jpg" style="width:100%">
 	  <a href="./img/autorretrato/autorretrato"><img class="w3-hover-opacity" src="./img/index/autorretrato.jpeg" style="width:100%"></a>
     <img class="w3-hover-opacity" src="./img/index/pororoca.jpg" style="width:100%">
-    <img class="w3-hover-opacity" src="./img/index/fugidio.jpeg" style="width:100%">
+    <a href="./img/fugidio/fugidio.jpeg"><img class="w3-hover-opacity" src="./img/index/fugidio.jpeg" style="width:100%"></a>
     
   </div>
 
