add indisponível to autorretrato

--- a/img/autorretrato/autorretrato.html
+++ b/img/autorretrato/autorretrato.html
@@ -30,7 +30,8 @@ img {margin-bottom: -7px}
 </div>
 <div>
   <p>Tinta acrílica e giz pastel oleoso sobre poema impresso em canson<br>
-     Agosto 2021. Canson a4. 
+     Agosto 2021. Canson a4. <br>
+     Indisponível.
   </p>
 </div>
 
