--- a/img/fugidio/fugidio.html
+++ b/img/fugidio/fugidio.html
@@ -29,7 +29,7 @@ img {margin-bottom: -7px}
 </header>
 </div>
 <div>
-  <p>Tinta acrílica e giz pastel oleoso tecido esticado em madeira.<br>
+  <p>Tinta acrílica e giz pastel oleoso em tecido esticado em madeira.<br>
      Agosto 2021. 70 x 90 cm. <br>
      Indisponível.
   </p>
