--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@ img {margin-bottom: -7px}
     <a href="./img/limites/limites"><img class="w3-hover-opacity" src="./img/index/limites.JPG" style="width:100%"></a>
     <img class="w3-hover-opacity" src="./img/index/penumbra.JPG" style="width:100%">
     <img class="w3-hover-opacity" src="./img/index/fogo.jpg" style="width:100%">
-    <a href="./img/desaguar/desaguar.html"><img class="w3-hover-opacity" src="./img/index/desaguar.jpeg" style="width:100%"></a>
+    <a href="./img/desaguar/desaguar"><img class="w3-hover-opacity" src="./img/index/desaguar.jpeg" style="width:100%"></a>
     <img class="w3-hover-opacity" src="./img/index/silencio.jpg" style="width:100%">
   </div>
 
   <div class="w3-third">
     <img class="w3-hover-opacity" src="./img/index/sentirpouco.JPG" style="width:100%">
-    <img class="w3-hover-opacity" src="./img/index/entreser.jpg" style="width:100%">
+    <a href="./img/entreser/"><img class="w3-hover-opacity" src="./img/index/entreser.jpg" style="width:100%"></a>
     <img class="w3-hover-opacity" src="./img/index/quentura.jpg" style="width:100%">
   </div>
 </div>
