--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ img {margin-bottom: -7px}
 
   <div class="w3-third">
     <a href="./img/limites/limites"><img class="w3-hover-opacity" src="./img/index/limites.JPG" style="width:100%"></a>
-    <img class="w3-hover-opacity" src="./img/index/penumbra.JPG" style="width:100%">
+    <a href="./img/penumbra/penumbra"><img class="w3-hover-opacity" src="./img/index/penumbra.JPG" style="width:100%"></a>
     <img class="w3-hover-opacity" src="./img/index/fogo.jpg" style="width:100%">
     <a href="./img/desaguar/desaguar"><img class="w3-hover-opacity" src="./img/index/desaguar.jpeg" style="width:100%"></a>
     <img class="w3-hover-opacity" src="./img/index/silencio.jpg" style="width:100%">
