add sentirpouco link

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ img {margin-bottom: -7px}
   </div>
 
   <div class="w3-third">
-    <img class="w3-hover-opacity" src="./img/index/sentirpouco.JPG" style="width:100%">
+    <a href="./img/sentirpouco/"><img class="w3-hover-opacity" src="./img/index/sentirpouco.JPG" style="width:100%"></a>
     <a href="./img/entreser/"><img class="w3-hover-opacity" src="./img/index/entreser.jpg" style="width:100%"></a>
     <img class="w3-hover-opacity" src="./img/index/quentura.jpg" style="width:100%">
   </div>
