--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ img {margin-bottom: -7px}
 <!-- Photo Grid -->
 <div class="w3-row-padding" id="myGrid" style="margin-bottom:128px">
   <div class="w3-third">
-    <img class="w3-hover-opacity" src="./img/index/dilacerar.jpg" style="width:100%">
+    <a href="./img/dilacerar/dilacerar"><img class="w3-hover-opacity" src="./img/index/dilacerar.jpg" style="width:100%"></a>
 	  <a href="./img/autorretrato/autorretrato"><img class="w3-hover-opacity" src="./img/index/autorretrato.jpeg" style="width:100%"></a>
     <a href="./img/pororoca/pororoca"><img class="w3-hover-opacity" src="./img/index/pororoca.jpg" style="width:100%"></a>
     <a href="./img/fugidio/fugidio"><img class="w3-hover-opacity" src="./img/index/fugidio.jpeg" style="width:100%"></a>
