update fogo date

--- a/img/fogo/fogo.html
+++ b/img/fogo/fogo.html
@@ -30,7 +30,7 @@ img {margin-bottom: -7px}
 </div>
 <div>
   <p>Tinta acrílica sobre tela<br>
-     Janeiro 2021. 120 x 80 cm. <br>
+     Fevereiro 2021. 120 x 80 cm. <br>
      Disponível. Contate-me para mais detalhes. 
   </p>
 </div>
