--- a/img/fogo/fogo.html
+++ b/img/fogo/fogo.html
@@ -29,7 +29,7 @@ img {margin-bottom: -7px}
 </header>
 </div>
 <div>
-  <p>Tinta acrílica sobre tela<br>
+  <p>Tinta acrílica e massa corrida sobre tela<br>
      Fevereiro 2021. 120 x 80 cm. <br>
      Disponível. Contate-me para mais detalhes. 
   </p>
