--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ img {margin-bottom: -7px}
     <a href="./img/penumbra/penumbra"><img class="w3-hover-opacity" src="./img/index/penumbra.JPG" style="width:100%"></a>
     <a href="./img/fogo/fogo"><img class="w3-hover-opacity" src="./img/index/fogo.jpg" style="width:100%"></a>
     <a href="./img/desaguar/desaguar"><img class="w3-hover-opacity" src="./img/index/desaguar.jpeg" style="width:100%"></a>
-    <a href="./img/silencio/silencio.html"><img class="w3-hover-opacity" src="./img/index/silencio.JPG" style="width:100%"></a>
+    <a href="./img/silencio/silencio"><img class="w3-hover-opacity" src="./img/index/silencio.JPG" style="width:100%"></a>
   </div>
 
   <div class="w3-third">
