fix quentura link

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ img {margin-bottom: -7px}
   <div class="w3-third">
     <a href="./img/sentirpouco/sentirpouco"><img class="w3-hover-opacity" src="./img/index/sentirpouco.JPG" style="width:100%"></a>
     <a href="./img/entreser/entreser"><img class="w3-hover-opacity" src="./img/index/entreser.jpg" style="width:100%"></a>
-    <a href="./img/quentura/quentura.html"><img class="w3-hover-opacity" src="./img/index/quentura.jpg" style="width:100%"></a>
+    <a href="./img/quentura/quentura"><img class="w3-hover-opacity" src="./img/index/quentura.jpg" style="width:100%"></a>
   </div>
 </div>
 
