fix quentura description

--- a/img/quentura/quentura.html
+++ b/img/quentura/quentura.html
@@ -29,7 +29,7 @@ img {margin-bottom: -7px}
 </header>
 </div>
 <div>
-  <p>Tinta acrílica e massa corrida sobre tela<br>
+  <p>Tinta acrílica e massa corrida sobre tela.<br>
      Dezembro 2020. 50 x 60 cm. <br>
      Indisponível.
   </p>
