try fix barra links

--- a/img/autorretrato/autorretrato.html
+++ b/img/autorretrato/autorretrato.html
@@ -14,9 +14,9 @@ img {margin-bottom: -7px}
 
 <!-- Sidebar -->
 <div class="w3-bar w3-border w3-round w3-light-grey w3-padding-16 w3-xlarge">
-    <a href="./obras" id="barra" class="w3-bar-item w3-button w3-right" style="width:33%">OBRAS</a>
-    <a href="./sobre" id="barra" class="w3-bar-item w3-button w3-right" style="width:33%">SOBRE</a>
-    <a href="./index" id="barra" class="w3-bar-item w3-button w3-right" style="width:34%">MARINANA</a>
+    <a href="././index.html" id="barra" class="w3-bar-item w3-button w3-right" style="width:33%">OBRAS</a>
+    <a href="././sobre.html" id="barra" class="w3-bar-item w3-button w3-right" style="width:33%">SOBRE</a>
+    <a href="././index.html" id="barra" class="w3-bar-item w3-button w3-right" style="width:34%">MARINANA</a>
 </div>
 
 <!-- !PAGE CONTENT! -->
