--- a/img/teto/teto.html
+++ b/img/teto/teto.html
@@ -30,8 +30,8 @@ img {margin-bottom: -7px}
 </div>
 <div>
   <p>Tinta acrílica e giz pastel oleoso sobre tela<br>
-     Dezembro 2021. 100 x 80 cm <br>
-     Disponível.
+     Dezembro 2021. 100 x 80 cm. <br>
+     Disponível. Contate-me para mais detalhes. 
   </p>
 </div>
 
