--- a/img/solidao/solidao.html
+++ b/img/solidao/solidao.html
@@ -25,19 +25,24 @@ img {margin-bottom: -7px}
 <!-- Header -->
 <div>
 <header class="w3-center w3-margin-bottom">
-	<h1 class="w3-normal" style="margin-top: 5%; margin-bottom:5%;"><b>Isso é um autorretrato?</b></h1>
+	<h1 class="w3-normal" style="margin-top: 5%; margin-bottom:5%;"><b>Gosto da solidão</b></h1>
 </header>
 </div>
 <div>
-  <p>Tinta acrílica e giz pastel oleoso sobre poema impresso em canson<br>
-     Agosto 2021. Canson a4. <br>
-     Indisponível.
+  <p>Tinta acrílica e giz pastel oleoso sobre tela<br>
+     Agosto 2021. 30 x 30 cm <br>
+     Disponível. Contate-me para mais detalhes. 
   </p>
 </div>
 
 <!-- Photo Grid -->
 <div style="margin-bottom:128px; width: 100%;">
-    <img src="./autorretrato.jpeg" style="width:100%; margin-bottom: 10%;">
+    <img src="./solidao.JPG" style="width:100%; margin-bottom: 10%;">
+    <img src="./solidao 1.JPG" style="width:100%; margin-bottom: 10%;">
+    <img src="./solidao 2.JPG" style="width:100%; margin-bottom: 10%;">
+    <img src="./solidao 3.JPG" style="width:100%; margin-bottom: 10%;">
+    <img src="./solidao 4.JPG" style="width:100%; margin-bottom: 10%;">
+    <img src="./solidao 5.JPG" style="width:100%; margin-bottom: 10%;">
 </div>
 
 <!-- End Page Content -->
