--- a/img/solidao/solidao.html
+++ b/img/solidao/solidao.html
@@ -30,7 +30,7 @@ img {margin-bottom: -7px}
 </div>
 <div>
   <p>Tinta acrílica e giz pastel oleoso sobre tela<br>
-     Agosto 2021. 30 x 30 cm <br>
+     Novembro 2021. 30 x 30 cm <br>
      Disponível. Contate-me para mais detalhes. 
   </p>
 </div>
