--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ img {margin-bottom: -7px}
 	  <a href="./img/autorretrato/autorretrato"><img class="w3-hover-opacity" src="./img/index/autorretrato.jpeg" style="width:100%"></a>
     <a href="./img/pororoca/pororoca"><img class="w3-hover-opacity" src="./img/index/pororoca.jpg" style="width:100%"></a>
     <a href="./img/fugidio/fugidio"><img class="w3-hover-opacity" src="./img/index/fugidio.jpeg" style="width:100%"></a>
+    <a href="./img/solidao/solidao"><img class="w3-hover-opacity" src="./img/index/solidao.JPG" style="width:100%"></a>
     
   </div>
 
@@ -51,6 +52,8 @@ img {margin-bottom: -7px}
     <a href="./img/sentirpouco/sentirpouco"><img class="w3-hover-opacity" src="./img/index/sentirpouco.JPG" style="width:100%"></a>
     <a href="./img/entreser/entreser"><img class="w3-hover-opacity" src="./img/index/entreser.jpg" style="width:100%"></a>
     <a href="./img/quentura/quentura"><img class="w3-hover-opacity" src="./img/index/quentura.jpg" style="width:100%"></a>
+    <a href="./img/teto/teto"><img class="w3-hover-opacity" src="./img/index/teto 1.JPG" style="width:100%"></a>
+    <a href="./img/quarteto/quarteto.JPG"><img class="w3-hover-opacity" src="./img/index/quarteto.JPG" style="width:100%"></a>
   </div>
 </div>
 
