--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ img {margin-bottom: -7px}
     <a href="./img/entreser/entreser"><img class="w3-hover-opacity" src="./img/index/entreser.jpg" style="width:100%"></a>
     <a href="./img/quentura/quentura"><img class="w3-hover-opacity" src="./img/index/quentura.jpg" style="width:100%"></a>
     <a href="./img/teto/teto"><img class="w3-hover-opacity" src="./img/index/teto 1.JPG" style="width:100%"></a>
-    <a href="./img/quarteto/quarteto.JPG"><img class="w3-hover-opacity" src="./img/index/quarteto.JPG" style="width:100%"></a>
+    <a href="./img/quarteto/quarteto.html"><img class="w3-hover-opacity" src="./img/index/quarteto.JPG" style="width:100%"></a>
   </div>
 </div>
 
