--- a/img/dilacerar/dilacerar.html
+++ b/img/dilacerar/dilacerar.html
@@ -37,7 +37,11 @@ img {margin-bottom: -7px}
 
 <!-- Photo Grid -->
 <div style="margin-bottom:128px; width: 100%;">
-    <img src="./dilacerar.jpg" style="width:100%; margin-bottom: 10%;">
+    <img src="./dilacerar.JPG" style="width:100%; margin-bottom: 10%;">
+    <img src="./dilacerar 1.JPG" style="width:100%; margin-bottom: 10%;">
+    <img src="./dilacerar 2.JPG" style="width:100%; margin-bottom: 10%;">
+    <img src="./dilacerar 3.JPG" style="width:100%; margin-bottom: 10%;">
+    <img src="./dilacerar 4.JPG" style="width:100%; margin-bottom: 10%;">
 </div>
 
 <!-- End Page Content -->
