--- a/img/fogo/fogo.html
+++ b/img/fogo/fogo.html
@@ -37,7 +37,12 @@ img {margin-bottom: -7px}
 
 <!-- Photo Grid -->
 <div style="margin-bottom:128px; width: 100%;">
-    <img src="./fogo.jpg" style="width:100%; margin-bottom: 10%;">
+    <img src="./fogo.JPG" style="width:100%; margin-bottom: 10%;">
+    <img src="./fogo 1.JPG" style="width:100%; margin-bottom: 10%;">
+    <img src="./fogo 2.JPG" style="width:100%; margin-bottom: 10%;">
+    <img src="./fogo 3.JPG" style="width:100%; margin-bottom: 10%;">
+    <img src="./fogo 4.JPG" style="width:100%; margin-bottom: 10%;">
+    <img src="./fogo 5.JPG" style="width:100%; margin-bottom: 10%;">
 </div>
 
 <!-- End Page Content -->
