--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ img {margin-bottom: -7px}
     <a href="./img/pororoca/pororoca"><img class="w3-hover-opacity" src="./img/index/pororoca.jpg" style="width:100%"></a>
     <a href="./img/fugidio/fugidio"><img class="w3-hover-opacity" src="./img/index/fugidio.jpeg" style="width:100%"></a>
     <a href="./img/solidao/solidao"><img class="w3-hover-opacity" src="./img/index/solidao.JPG" style="width:100%"></a>
+    <a href="./img/desatar/desatar.html"><img class="w3-hover-opacity" src="./img/index/desatar.JPG" style="width:100%"></a>
     
   </div>
 
@@ -54,6 +55,7 @@ img {margin-bottom: -7px}
     <a href="./img/quentura/quentura"><img class="w3-hover-opacity" src="./img/index/quentura.jpg" style="width:100%"></a>
     <a href="./img/teto/teto"><img class="w3-hover-opacity" src="./img/index/teto 1.JPG" style="width:100%"></a>
     <a href="./img/quarteto/quarteto.html"><img class="w3-hover-opacity" src="./img/index/quarteto.JPG" style="width:100%"></a>
+    <a href="./img/desatar/desatar.html"><img class="w3-hover-opacity" src="./img/index/desatar de novo.jpg.JPG" style="width:100%"></a>
   </div>
 </div>
 
