--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@ img {margin-bottom: -7px}
 <!-- Photo Grid -->
 <div class="w3-row-padding" id="myGrid" style="margin-bottom:128px">
   <div class="w3-third">
-    <a href="./img/dilacerar/dilacerar"><img class="w3-hover-opacity" src="./img/index/dilacerar.jpg" style="width:100%"></a>
+    <a href="./img/solidao/solidao"><img class="w3-hover-opacity" src="./img/index/solidao.JPG" style="width:100%"></a>
+    <a href="./img/desatar/desatar.html"><img class="w3-hover-opacity" src="./img/index/desatar.JPG" style="width:100%"></a><a href="./img/dilacerar/dilacerar"><img class="w3-hover-opacity" src="./img/index/dilacerar.jpg" style="width:100%"></a>
 	  <a href="./img/autorretrato/autorretrato"><img class="w3-hover-opacity" src="./img/index/autorretrato.jpeg" style="width:100%"></a>
     <a href="./img/pororoca/pororoca"><img class="w3-hover-opacity" src="./img/index/pororoca.jpg" style="width:100%"></a>
     <a href="./img/fugidio/fugidio"><img class="w3-hover-opacity" src="./img/index/fugidio.jpeg" style="width:100%"></a>
-    <a href="./img/solidao/solidao"><img class="w3-hover-opacity" src="./img/index/solidao.JPG" style="width:100%"></a>
-    <a href="./img/desatar/desatar.html"><img class="w3-hover-opacity" src="./img/index/desatar.JPG" style="width:100%"></a>
+   
     
   </div>
 
@@ -46,16 +46,17 @@ img {margin-bottom: -7px}
     <a href="./img/penumbra/penumbra"><img class="w3-hover-opacity" src="./img/index/penumbra.JPG" style="width:100%"></a>
     <a href="./img/fogo/fogo"><img class="w3-hover-opacity" src="./img/index/fogo.jpg" style="width:100%"></a>
     <a href="./img/desaguar/desaguar"><img class="w3-hover-opacity" src="./img/index/desaguar.jpeg" style="width:100%"></a>
-    <a href="./img/silencio/silencio"><img class="w3-hover-opacity" src="./img/index/silencio.JPG" style="width:100%"></a>
+    <a href="./img/silencio/silencio.html"><img class="w3-hover-opacity" src="./img/index/silencio.JPG" style="width:100%"></a>
   </div>
 
   <div class="w3-third">
-    <a href="./img/sentirpouco/sentirpouco"><img class="w3-hover-opacity" src="./img/index/sentirpouco.JPG" style="width:100%"></a>
-    <a href="./img/entreser/entreser"><img class="w3-hover-opacity" src="./img/index/entreser.jpg" style="width:100%"></a>
-    <a href="./img/quentura/quentura"><img class="w3-hover-opacity" src="./img/index/quentura.jpg" style="width:100%"></a>
     <a href="./img/teto/teto"><img class="w3-hover-opacity" src="./img/index/teto 1.JPG" style="width:100%"></a>
     <a href="./img/quarteto/quarteto.html"><img class="w3-hover-opacity" src="./img/index/quarteto.JPG" style="width:100%"></a>
     <a href="./img/desatar/desatar.html"><img class="w3-hover-opacity" src="./img/index/desatar de novo.jpg.JPG" style="width:100%"></a>
+    <a href="./img/sentirpouco/sentirpouco"><img class="w3-hover-opacity" src="./img/index/sentirpouco.JPG" style="width:100%"></a>
+    <a href="./img/entreser/entreser"><img class="w3-hover-opacity" src="./img/index/entreser.jpg" style="width:100%"></a>
+    <a href="./img/quentura/quentura"><img class="w3-hover-opacity" src="./img/index/quentura.jpg" style="width:100%"></a>
+    
   </div>
 </div>
 
