fix desatar link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ img {margin-bottom: -7px}
   <div class="w3-third">
     <a href="./img/teto/teto"><img class="w3-hover-opacity" src="./img/index/teto 1.JPG" style="width:100%"></a>
     <a href="./img/quarteto/quarteto.html"><img class="w3-hover-opacity" src="./img/index/quarteto.JPG" style="width:100%"></a>
-    <a href="./img/desatar/desatar.html"><img class="w3-hover-opacity" src="./img/index/desatar de novo.jpg.JPG" style="width:100%"></a>
+    <a href="./img/desatar/desatar.html"><img class="w3-hover-opacity" src="./img/index/desatar de novo.jpg" style="width:100%"></a>
     <a href="./img/sentirpouco/sentirpouco"><img class="w3-hover-opacity" src="./img/index/sentirpouco.JPG" style="width:100%"></a>
     <a href="./img/entreser/entreser"><img class="w3-hover-opacity" src="./img/index/entreser.jpg" style="width:100%"></a>
     <a href="./img/quentura/quentura"><img class="w3-hover-opacity" src="./img/index/quentura.jpg" style="width:100%"></a>
