--- a/img/dilacerar/dilacerar.html
+++ b/img/dilacerar/dilacerar.html
@@ -31,7 +31,7 @@ img {margin-bottom: -7px}
 <div>
   <p>Tinta acrílica sobre tela<br>
      Outubro 2021. 60 x 70 cm. <br>
-     Disponível. Contate-me para mais detalhes. 
+     Indísponível. 
   </p>
 </div>
 
