--- a/img/fogo/fogo.html
+++ b/img/fogo/fogo.html
@@ -31,7 +31,7 @@ img {margin-bottom: -7px}
 <div>
   <p>Tinta acrílica e massa corrida sobre tela<br>
      Fevereiro 2021. 120 x 80 cm. <br>
-     Disponível. Contate-me para mais detalhes. 
+     Indisponível. 
   </p>
 </div>
 
