--- a/img/pororoca/pororoca.html
+++ b/img/pororoca/pororoca.html
@@ -45,7 +45,7 @@ img {margin-bottom: -7px}
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin-top:128px"> 
-  <a href="mailto:marianabbarros98@gmail.com" target="_blank"><img src="../mini/mail.png" style="width: 50px"/></a>
+  <a href="mailto:marianabrandaoart@gmail.com" target="_blank"><img src="../mini/mail.png" style="width: 50px"/></a>
   <a href="http://www.instagram.com/xmarinanax" target="_blank"><img src="../mini/insta.png" style="width: 35px"/></a>
   <p class="w3-medium">Mariana Brandão</p>
 </footer>
