--- a/obras.html
+++ b/obras.html
@@ -32,7 +32,9 @@ img {margin-bottom: -7px}
 <!-- Photo Grid -->
 <div class="w3-display-container" style="margin-bottom:100px">
 	<ul class="w3-ul w3-large">
+		<li>2021 – Primavera queima nas quatro estações, 60 x 80 cm</li>
 		<li>2021 – Gênesis, 60 x 80 cm</li>
+		<li>2021 – Quarteto em dois 3, 30 x 30 cm</li>
 		<li>2021 – Sob o meu teto, 100 x 80 cm</li>
 		<li>2021 – Eu nem sei mais o que é sentir pouco, 120 x 80 cm</li>
 		<li>2021 – Limites do vazio, 60 x 80 cm</li>
@@ -68,7 +70,7 @@ img {margin-bottom: -7px}
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge"> 
-  <a href="mailto:marianabbarros98@gmail.com" target="_blank"><img src="./img/mini/mail.png" style="width: 50px"/></a>
+  <a href="mailto:marianabrandaoart@gmail.com" target="_blank"><img src="./img/mini/mail.png" style="width: 50px"/></a>
   <a href="http://www.instagram.com/xmarinanax" target="_blank"><img src="./img/mini/insta.png" style="width: 35px"/></a>
   <p class="w3-medium">Mariana Brandão</p>
 </footer>
