--- a/obras.html
+++ b/obras.html
@@ -32,7 +32,8 @@ img {margin-bottom: -7px}
 <!-- Photo Grid -->
 <div class="w3-display-container" style="margin-bottom:100px">
 	<ul class="w3-ul w3-large">
-		<li>2021 – Primavera queima nas quatro estações, 60 x 80 cm</li>
+		<li>2021 – Primavera arde nas quatro estações, 60 x 80 cm</li>
+		<li>2021 – Brochura, 70 x 90 cm</li>
 		<li>2021 – Gênesis, 60 x 80 cm</li>
 		<li>2021 – Quarteto em dois 3, 30 x 30 cm</li>
 		<li>2021 – Sob o meu teto, 100 x 80 cm</li>
