--- a/img/brochura/brochura.html
+++ b/img/brochura/brochura.html
@@ -25,7 +25,7 @@ img {margin-bottom: -7px}
 <!-- Header -->
 <div>
 <header class="w3-center w3-margin-bottom">
-	<h1 class="w3-normal" style="margin-top: 5%; margin-bottom:5%;"><b>Isso é um autorretrato?</b></h1>
+	<h1 class="w3-normal" style="margin-top: 5%; margin-bottom:5%;"><b>Brochura</b></h1>
 </header>
 </div>
 <div>
