--- a/img/brochura/brochura.html
+++ b/img/brochura/brochura.html
@@ -31,7 +31,7 @@ img {margin-bottom: -7px}
 <div>
   <p>Tinta acrílica, giz pastel oleoso, café e massa corrida sobre tela<br>
      2022. 70 x 90 cm. <br>
-     Disponível.
+     Disponível. Contacte-me para mais detalhes. 
   </p>
 </div>
 
