--- a/img/primavera/primavera.html
+++ b/img/primavera/primavera.html
@@ -25,25 +25,28 @@ img {margin-bottom: -7px}
 <!-- Header -->
 <div>
 <header class="w3-center w3-margin-bottom">
-	<h1 class="w3-normal" style="margin-top: 5%; margin-bottom:5%;"><b>Quarteto em dois 2</b></h1>
+	<h1 class="w3-normal" style="margin-top: 5%; margin-bottom:5%;"><b>Primavera arde nas quatro estações</b></h1>
 </header>
 </div>
 <div>
   <p>Tinta acrílica e giz pastel oleoso sobre tela<br>
-     Novembro 2021. 30 x 30 cm. <br>
-     Disponível. Contate-me para mais detalhes. 
+     2022. 60 x 80 cm. <br>
+     Indisponível. 
   </p>
 </div>
 
 <!-- Photo Grid -->
 <div style="margin-bottom:128px; width: 100%;">
-    <img src="./quarteto.JPG" style="width:100%; margin-bottom: 10%;">
-    <img src="./quarteto 1.JPG" style="width:100%; margin-bottom: 10%;">
-    <img src="./quarteto 2.JPG" style="width:100%; margin-bottom: 10%;">
-    <img src="./quarteto 3.JPG" style="width:100%; margin-bottom: 10%;">
-    <img src="./quarteto 4.JPG" style="width:100%; margin-bottom: 10%;">
-    <img src="./quarteto 5.JPG" style="width:100%; margin-bottom: 10%;">
-    <img src="./quarteto 6.JPG" style="width:100%; margin-bottom: 10%;">
+    <img src="./primavera.jpg" style="width:100%; margin-bottom: 10%;">
+    <img src="./primavera 1.JPG" style="width:100%; margin-bottom: 10%;">
+    <img src="./primavera 2.JPG" style="width:100%; margin-bottom: 10%;">
+    <img src="./primavera 3.JPG" style="width:100%; margin-bottom: 10%;">
+    <img src="./primavera 4.JPG" style="width:100%; margin-bottom: 10%;">
+    <img src="./primavera 5.JPG" style="width:100%; margin-bottom: 10%;">
+    <img src="./primavera 6.JPG" style="width:100%; margin-bottom: 10%;">
+    <img src="./primavera 7.JPG" style="width:100%; margin-bottom: 10%;">
+    <img src="./primavera 8.JPG" style="width:100%; margin-bottom: 10%;">
+    <img src="./primavera 9.JPG" style="width:100%; margin-bottom: 10%;">
 </div>
 
 <!-- End Page Content -->
