--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ img {margin-bottom: -7px}
 <!-- Photo Grid -->
 <div class="w3-row-padding" id="myGrid" style="margin-bottom:128px">
   <div class="w3-third">
-    <a href="./img/primavera/primavera.jpg"><img class="w3-hover-opacity" src="./img/index/primavera.jpg" style="width:100%"></a>
+    <a href="./img/primavera/primavera.html"><img class="w3-hover-opacity" src="./img/index/primavera.jpg" style="width:100%"></a>
     <a href="./img/solidao/solidao"><img class="w3-hover-opacity" src="./img/index/solidao.JPG" style="width:100%"></a>
     <a href="./img/desatar/desatar.html"><img class="w3-hover-opacity" src="./img/index/desatar.JPG" style="width:100%"></a><a href="./img/dilacerar/dilacerar"><img class="w3-hover-opacity" src="./img/index/dilacerar.jpg" style="width:100%"></a>
 	  <a href="./img/autorretrato/autorretrato"><img class="w3-hover-opacity" src="./img/index/autorretrato.jpeg" style="width:100%"></a>
@@ -43,7 +43,7 @@ img {margin-bottom: -7px}
   </div>
 
   <div class="w3-third">
-    <a href="./img/brochura/brochura.JPG"><img class="w3-hover-opacity" src="./img/index/brochura.JPG" style="width:100%"></a>
+    <a href="./img/brochura/brochura.html"><img class="w3-hover-opacity" src="./img/index/brochura.JPG" style="width:100%"></a>
     <a href="./img/limites/limites"><img class="w3-hover-opacity" src="./img/index/limites.JPG" style="width:100%"></a>
     <a href="./img/penumbra/penumbra"><img class="w3-hover-opacity" src="./img/index/penumbra.JPG" style="width:100%"></a>
     <a href="./img/fogo/fogo"><img class="w3-hover-opacity" src="./img/index/fogo.jpg" style="width:100%"></a>
@@ -53,7 +53,7 @@ img {margin-bottom: -7px}
   </div>
 
   <div class="w3-third">
-    <a href="./img/genesis/genesis.JPG"><img class="w3-hover-opacity" src="./img/index/genesis.JPG" style="width:100%"></a>
+    <a href="./img/genesis/genesis.html"><img class="w3-hover-opacity" src="./img/index/genesis.JPG" style="width:100%"></a>
     <a href="./img/teto/teto"><img class="w3-hover-opacity" src="./img/index/teto 1.JPG" style="width:100%"></a>
     <a href="./img/quarteto/quarteto.html"><img class="w3-hover-opacity" src="./img/index/quarteto.JPG" style="width:100%"></a>
     <a href="./img/desatar/desatar.html"><img class="w3-hover-opacity" src="./img/index/desatardenovo.jpg" style="width:100%"></a>
