--- a/img/fogo/fogo.html
+++ b/img/fogo/fogo.html
@@ -14,9 +14,9 @@ img {margin-bottom: -7px}
 
 <!-- Sidebar -->
 <div class="w3-bar w3-border w3-round w3-light-grey w3-padding-16 w3-xlarge">
-    <a href="marinana.art/obras" id="barra" class="w3-bar-item w3-button w3-right" style="width:33%">OBRAS</a>
-    <a href="marinana.art/sobre" id="barra" class="w3-bar-item w3-button w3-right" style="width:33%">SOBRE</a>
-    <a href="marinana.art" id="barra" class="w3-bar-item w3-button w3-right" style="width:34%">MARINANA</a>
+    <a href="../obras" id="barra" class="w3-bar-item w3-button w3-right" style="width:33%">OBRAS</a>
+    <a href="../sobre" id="barra" class="w3-bar-item w3-button w3-right" style="width:33%">SOBRE</a>
+    <a href=".." id="barra" class="w3-bar-item w3-button w3-right" style="width:34%">MARINANA</a>
 </div>
 
 <!-- !PAGE CONTENT! -->
