--- a/sobre.html
+++ b/sobre.html
@@ -32,7 +32,7 @@ img {margin-bottom: -7px}
 <!-- Photo Grid -->
 <div class="w3-display-container" style="margin-bottom:1000px">
 	<div class="w3-half">
-		<img src="./img/sobre/sobre.jpeg" class="w3-round"
+		<img src="./img/sobre/sobre 2.JPG" class="w3-round"
 		style="display: block; margin-left: auto; margin-right: auto; width: 50%;">
 	</div>
 	<div class="w3-half">
