--- a/img/certezas/certezas.html
+++ b/img/certezas/certezas.html
@@ -25,18 +25,19 @@ img {margin-bottom: -7px}
 <!-- Header -->
 <div>
 <header class="w3-center w3-margin-bottom">
-	<h1 class="w3-normal" style="margin-top: 5%; margin-bottom:5%;"><b>Primavera arde nas quatro estações</b></h1>
+	<h1 class="w3-normal" style="margin-top: 5%; margin-bottom:5%;"><b>As certezas (I e II)</b></h1>
 </header>
 </div>
 <div>
   <p>Tinta acrílica e giz pastel oleoso sobre tela<br>
-     2022. 60 x 80 cm. <br>
-     Indisponível. 
+     2022. 40 x 50 cm. <br>
+     Indisponíveis. 
   </p>
 </div>
 
 <!-- Photo Grid -->
 <div style="margin-bottom:128px; width: 100%;">
+  <img src="./certezas.JPG" style="width:100%; margin-bottom: 10%;">
     <img src="./certezas 1.JPG" style="width:100%; margin-bottom: 10%;">
     <img src="./certezas 2.JPG" style="width:100%; margin-bottom: 10%;">
     <img src="./certezas 3.JPG" style="width:100%; margin-bottom: 10%;">
